fixed sizing and alignment of hero and nav

--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,9 @@ h3 {
         letter-spacing: var(--ls-xxsmall);
     }
 }
+
+@media only screen and (min-width: 768px) {
+    .pageContainer {
+        width: 89.5%;
+    }
+}
