--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -17,7 +17,7 @@
     margin-top: 32px;
     align-items: center;
     height: 48px;
-    width: 64%;
+    width: 200px;
     background-color: var(--clr-dark-blue);
 }
 
@@ -53,5 +53,22 @@
     .heroText {
         grid-area: overlap;
         align-self: end;
+        width: 80.5%;
+        background-color: white;
+        height: 278px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+
+    .heroTitle {
+        width: 458px;
+    }
+}
+
+@media only screen and (min-width: 1377px) {
+    .heroText {
+        max-width: 514px;
     }
 }
