--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -16,3 +16,17 @@
     height: 32px;
     width: 60px;
 }
+
+@media only screen and (min-width: 768px) {
+    .navBar {
+        margin-top: 64px;
+        margin-bottom: 47px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .navBar {
+        margin-top: 64px;
+        margin-bottom: 54px;
+    }
+}
